<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ocr.ImageReaderActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/layout_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:fitsSystemWindows="true"
            app:scrimAnimationDuration="300">

            <LinearLayout
                android:id="@+id/layout_play_bar"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:background="@color/colorBackgroundDark"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7"
                        android:id="@+id/img_ocr_text"
                        android:contentDescription="@string/img_ocr_text_description"/>

                    <TextView
                        android:id="@+id/txt_choose_image"
                        android:textColor="#000000"
                        android:alpha="0.3"
                        android:layout_width="fill_parent"
                        android:layout_height="400dp"
                        android:gravity="center"
                        android:text="@string/text_choose_image"/>

                    <ProgressBar
                        android:visibility="gone"
                        android:layout_margin="12dp"
                        android:indeterminate="true"
                        android:id="@+id/progress_loading_tts"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/progress_loading_ocr_text"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:indeterminateTint="@color/colorWhite"
                        android:indeterminate="true"
                        android:layout_margin="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/btn_rewind"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fast_rewind_white_24dp"
                        android:layout_margin="8dp"
                        android:padding="16dp"
                        android:contentDescription="@string/btn_rewind_description"/>

                    <ImageButton
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="8dp"
                        android:padding="16dp"
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_play_arrow_white_24dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/btn_play_description"/>

                    <ImageButton
                        android:id="@+id/btn_forward"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fast_forward_white_24dp"
                        android:layout_margin="8dp"
                        android:padding="16dp"
                        android:contentDescription="@string/btn_forward_description"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                app:title="">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_nested_ocr_text"
        android:background="@color/colorBackgroundLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_marginBottom="?attr/actionBarSize"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            app:cardCornerRadius="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:id="@+id/caption_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:background="@color/colorBlack"
                android:textColor="@color/colorWhite"
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_margin="8dp"
                android:id="@+id/txt_ocr_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/img_ocr_text"
        app:layout_anchorGravity="bottom|right|end"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="24dp"
        android:src="@drawable/ic_insert_photo_white_24dp"
        android:id="@+id/btn_select_image"/>
</android.support.design.widget.CoordinatorLayout>